[workspace]
members = [
    "crates/utils",
    "crates/types",
    "crates/gateway",
    "crates/cluster",
]

default-members = ["crates/gateway"]
resolver = "3"

[workspace.dependencies]
dotenv = "0.15.0"
anyhow = "1.0.98"
thiserror = "2.0.17"
tracing = "0.1.41"
rand = "0.9.2"
lazy_static="1.5.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = {version = "0.1.17", features = ["full"]}
tokio-util = {version = "0.7.16", features = ["full"] }
tower-http = {version = "0.6.6", features = ["cors", "fs", "trace", "catch-panic"]}
axum = { version = "0.8.6", features = ["macros", "ws", "multipart"]}
axum-extra = { version = "0.10.3", features = ["cookie", "typed-header"]}
serde = "1.0"
dashmap = "6.1.0"
serde_json = " 1.0"
bitcode = "0.6.7"
chrono = "0.4.42"
chrono-tz = "0.10.4"
jsonwebtoken = {version = "10.0.0", features = ["rust_crypto"]}
fred = {version = "10.1.0", features = ["i-cluster", "i-client", "subscriber-client","i-scripts", "sha-1", "enable-native-tls"] }
zenoh = {version = "1.6.1", features = ["shared-memory"]}
flume = "0.11"
mimalloc = { version = "0.1.48", features = ["v3"]}
async-channel = "2.5.0"
hostname = "0.4.1"
md5 = "0.8.0"
once_cell = "1.21.3"
crc32fast = "1.5.0"
parking_lot = "0.12.5"

[profile.dev]
opt-level = 0
incremental = true
debug = true

[profile.test]
opt-level = 0
incremental = true
debug = true

[profile.release]
opt-level = 3         # Maximum optimization level
debug = false         # Disable debug info to reduce binary size
rpath = false         # Do not add runtime path to executables
lto = true            # Enable Link Time Optimization for better performance
codegen-units = 1     # Set codegen units to 1 for best optimization
panic = 'abort'       # Abort immediately on panic to reduce binary size and improve performance
incremental = false   # Disable incremental compilation in release mode to prioritize performance