[package]
name = "utils"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
dotenv.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
tracing.workspace = true
dashmap.workspace = true
thiserror.workspace = true
serde.workspace = true
rand.workspace = true
hostname.workspace = true
tracing-subscriber.workspace = true
md5.workspace = true
once_cell.workspace = true
crc32fast.workspace = true
jsonwebtoken.workspace = true
parking_lot.workspace = true
lazy_static.workspace = true
zenoh.workspace = true
serde_json.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
sysctl = "0.7.1"
[target.'cfg(windows)'.dependencies]
winreg = "0.55"